--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,19 +29,43 @@
       <tbody id="insert">
       </tbody>
     </table>
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">댓글 수정하기</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <input type="hidden" id="edit-id">
+            <input type="text" class="form-control" placeholder="Enter Comment.." id="edit-comment">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+            <button type="button" class="btn btn-primary" onclick="editComment()" data-dismiss="modal">수정</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
+    $('#editModal').on('hidden.bs.modal', e => {
+      document.getElementById("edit-comment").value = "";
+    });
+
     const spawnElement = data => {
       document.getElementById("insert").innerHTML += `
         <tr comment-id="${data.id}">
           <td>${data.username}</td>
           <td>${data.content}</td>
-          <td><button class="btn btn-primary">수정</button></td>
-          <td><button class="btn btn-danger" onclick="deleteComment(${data.id})">삭제</button></td>
+          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editModal" onclick="setEditId(${data.id})">수정</button></td>
+          <td><button type="button" class="btn btn-danger" onclick="deleteComment(${data.id})">삭제</button></td>
         </tr>
       `;
     };
@@ -71,6 +95,22 @@
       if (data !== null && data) {
         const element = document.querySelector(`[comment-id="${id}"]`);
         document.getElementById("insert").removeChild(element);
+      }
+    };
+
+    const setEditId = id => {
+      document.getElementById("edit-id").value = id;
+    };
+
+    const editComment = async () => {
+      const id = document.getElementById("edit-id").value;
+      const value = document.getElementById("edit-comment").value;
+      const { data } = await axios.put(`/comment/${id}`, {
+        content: value
+      });
+
+      if (data !== null && data) {
+        await retreiveComments();
       }
     };
 
